# toy-tba

./: Cargo.toml  README.md  netlify.toml
src/: bot.rs  error.rs  lib.rs  methods.rs  net.rs  requester.rs  requests.rs  tools.rs
src/methods/: get_me.rs  send_document.rs  send_message.rs  send_photo.rs
src/net/: download.rs  request.rs  telegram_response.rs
src/requests/: get_me.rs  has_payload.rs  json.rs  multipart.rs  payload.rs  request.rs  send_message.rs
src/types/: chat.rs  chat_id.rs  encrypted_credentials.rs  inline_keyboard_button.rs  inline_keyboard_markup.rs  inline_query_result.rs  input_file.rs  input_message_content.rs  message.rs  message_entity.rs  mod.rs  parse_mode.rs  reply_markup.rs  response_parameters.rs  unit_false.rs  update.rs
