[package]
name = "basically-rust-lib"
version = "0.1.0"
authors = ["Waffle <waffle.lapkin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
# features those require nightly compiler
nightly = []

[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
