[package]
name = "toy-tba"
version = "0.1.0"
authors = ["Waffle <waffle.lapkin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.7", features = ["json", "stream"] }
tokio = { version = "0.2.22", features = ["full"] }
bytes = "0.5.6"
futures = "0.3.5" # used in 1 place? ugh

serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
serde_with_macros = "1.0.1"

derive_more = "0.15.0"
thiserror = "1.0.2"

serde-multipart = { git = "https://github.com/WaffleLapkin/serde-multipart.git", rev = "44cff3cb679ed2a99919c8881be4edcabac9dafc" }

[features]
# features those require nightly compiler
nightly = []

[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
